my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESHNEG/T_ESHNEG-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ESHNEG_STRUCT_H
#define T_ESHNEG_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ESHNEG(void);


#endif /* not T_ESHNEG_STRUCT_H */
